<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The first child in the layout is for the main Activity UI-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:background="#ffffffff">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp"
            android:padding="10dp" >
        </ListView>
    </RelativeLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mollie.exam.NotificationActivity">

    <LinearLayout
        android:id="@+id/notification"
        style="@style/settings_item_layout">

    <TextView
        android:id="@+id/notificationHeader"
        style="@style/settings_header"
        android:textSize="17sp"
        android:text="@string/notification_head"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/labelNotification"
                style="@style/settings_sub_header"
                android:textSize="17sp"
                android:text="@string/notification_label" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/timerSwitch"
                android:theme="@style/switch_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/notificationNote"
            style="@style/settings_details"
            android:paddingTop="@dimen/items_top_padding"
            android:paddingBottom="@dimen/items_inbetween_space"
            android:textSize="17sp"
            android:text="@string/notifcation_note" />

        <LinearLayout
            android:id="@+id/scheduleTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/items_inbetween_space">

                <TextView
                    android:id="@+id/scheduleLabel"
                    style="@style/settings_sub_header"
                    android:textSize="17sp"
                    android:text="@string/schedule_label" />

                <ImageView
                    android:id="@+id/clock"
                    android:layout_width="@dimen/timer_icon"
                    android:layout_height="@dimen/timer_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_timer" />

            </RelativeLayout>


            <TextView
                android:id="@+id/timeDisplay"
                style="@style/settings_details"
                android:paddingTop="@dimen/items_top_padding"
                android:paddingBottom="@dimen/items_inbetween_space"
                android:textSize="17sp"
                android:text="@string/scheduled_notification" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

    <ListView
        android:id="@+id/navDrawer"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee"/>

</android.support.v4.widget.DrawerLayout>
